[workspace]
members = ["bins/*", "libs/*"]
resolver = "2"

[workspace.package]
authors = ["BEE project contributors"]
description = "A web browser engine to be embedded within applications"
edition = "2021"
homepage = "https://github.com/bee-browser/bee"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/bee-browser/bee.git"
# TODO(build): MSRV of functionality to inherit keys from workspace.package is 1.64+.
# However, we've never checked if this crate can be built w/ MSRV.
# See https://doc.rust-lang.org/cargo/reference/workspaces.html#the-package-table.
#rust-version = "1.64"
version = "0.0.0"

[profile.release]
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.profiling]
inherits = "release"
debug = true
strip = false
