[workspace]
members = ["bins/*", "libs/*"]
resolver = "2"

[workspace.package]
authors = ["BEE project contributors"]
description = "A web browser engine to be embedded within applications"
edition = "2024"
homepage = "https://github.com/bee-browser/bee"
license = "Apache-2.0 OR MIT"
publish = false
repository = "https://github.com/bee-browser/bee.git"
rust-version = "1.91.0"
version = "0.0.0"

[profile.release]
panic = "abort"
strip = true

[profile.release-lto]
inherits = "release"
lto = true

[profile.release-symbols]
inherits = "release"
debug = true
strip = false
