[package]
name = "bee-lmp"
version = "0.1.0"
authors = ["BEE project contributors"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.70"
bee-layout = { path = "../../libs/layout", features = ["service"] }
serde_json = "1.0.95"
structopt = "0.3.26"

[[bin]]
name = "bee-lmp"
bench = false
