[package]
name = "bjs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.42", features = ["env", "derive", "wrap_help"] }
cranelift-codegen = "0.122.0"
cranelift-reader = "0.122.0"
itertools = "0.14.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
