[package]
name = "bjs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["env", "derive", "wrap_help"] }
cranelift-codegen = "0.123.2"
cranelift-reader = "0.123.2"
itertools = "0.14.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
serde = { version = "1.0.224", features = ["derive"] }
serde_json = "1.0.143"
