[package]
name = "bjs"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["env", "derive", "wrap_help"] }
cranelift-codegen = "0.125.4"
cranelift-reader = "0.125.4"
itertools = "0.14.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[lints]
workspace = true
