[package]
name = "dfagen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
base = { path = "../../libs/base" }
clap = { version = "4.5.36", features = ["derive", "env"] }
indexmap = { version = "2.9.0", features = ["serde"] }
logging = { path = "../../libs/logging" }
maplit = "1.0.2"
serde = { version = "1.0.219", features = ["derive", "rc"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
smallvec = "1.15.0"

[dev-dependencies]
ctor = "0.4.1"
