[package]
name = "dfagen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
base = { path = "../../libs/base" }
clap = { version = "4.5.48", features = ["derive", "env"] }
indexmap = { version = "2.11.4", features = ["serde"] }
logging = { path = "../../libs/logging" }
maplit = "1.0.2"
serde = { version = "1.0.225", features = ["derive", "rc"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
smallvec = "1.15.1"

[dev-dependencies]
ctor = "0.5.0"
