[package]
name = "esgrammar"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.44", features = ["derive"] }
htmlparser = { path = "../../libs/htmlparser" }
toydom = { path = "../../libs/toydom" }
