[package]
name = "estree"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
assert-json-diff = "2.0.2"
clap = { version = "4.5.49", features = ["env", "derive", "wrap_help"] }
jsparser = { path = "../../libs/jsparser", features = ["location"] }
logging = { path = "../../libs/logging" }
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
