[package]
name = "jsoncmp"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
assert-json-diff = "2.0.2"
clap = { version = "4.5.23", features = ["env", "derive", "wrap_help"] }
serde = { version = "1.0.217", features = ["derive"] }
# "unbounded_depth" is needed for parsing a large JSON.
# See https://github.com/serde-rs/json/issues/334.
serde_json = { version = "1.0.135", features = ["preserve_order", "unbounded_depth"] }
