[package]
name = "jstb"
version = "0.0.0"
edition = "2021"
authors = ["BEE project contributors"]
publish = false

[dependencies]
anyhow = "1.0.90"
clap = { version = "4.5.20", features = ["env", "derive", "wrap_help"] }
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
