[package]
name = "jstb"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["env", "derive", "wrap_help"] }
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
