[package]
name = "jstb"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.29", features = ["env", "derive", "wrap_help"] }
itertools = "0.14.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
