[package]
name = "lalrgen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
base = { path = "../../libs/base" }
clap = { version = "4.5.53", features = ["derive", "env"] }
dashmap = "6.1.0"
humantime = "2.3.0"
im = "15.1.0"
indexmap = "2.12.1"
itertools = "0.14.0"
logging = { path = "../../libs/logging" }
maplit = "1.0.2"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"

[dev-dependencies]
assert_matches = "1.5.0"
ctor = "0.6.3"
pretty_assertions = "1.4.1"

[lints]
workspace = true
