[package]
name = "lmp"
version = "0.0.0"
authors = ["BEE project contributors"]
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.88"
clap = { version = "4.5.17", features = ["env", "derive", "wrap_help"] }
layout = { path = "../../libs/layout", features = ["service"] }
serde_json = "1.0.128"
