[package]
name = "lmp"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.51", features = ["env", "derive", "wrap_help"] }
layout = { path = "../../libs/layout", features = ["service"] }
serde_json = "1.0.145"
