[package]
name = "logview"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
axum = "0.8.4"
bytes = "1.10.1"
clap = { version = "4.5.48", features = ["derive"] }
logging = { path = "../../libs/logging" }
mime = "0.3.17"
mustache = "0.9.0"
open = "5.3.2"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_yaml = "0.9.34"
shell-words = "1.1.0"
tempfile = "3.23.0"
tokio = { version = "1.47.1", features = ["io-util", "macros", "process", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tower-http = { version = "0.6.6", features = ["fs", "set-header", "trace"] }
