[package]
name = "test262"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.54", features = ["env", "derive", "wrap_help"] }
humantime = "2.3.0"
indicatif = "0.18.3"
is_executable = "1.0.5"
itertools = "0.14.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
pathdiff = "0.2.3"
rayon = "1.11.0"
rustc-hash = "2.1.1"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.148"
serde_norway = "0.9.42"
walkdir = "2.5.0"

[lints]
workspace = true
