[package]
name = "test262"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["env", "derive", "wrap_help"] }
humantime = "2.4.0"
indicatif = "0.18.6"
is_executable = "1.0.6"
itertools = "0.15.0"
jsruntime = { path = "../../libs/jsruntime" }
logging = { path = "../../libs/logging" }
pathdiff = "0.2.3"
rayon = "1.12.0"
rustc-hash = "2.1.3"
serde = { version = "1.0.228", features = ["derive", "rc"] }
serde_json = "1.0.150"
serde_norway = "0.9.42"
walkdir = "2.5.0"

[lints]
workspace = true
