[package]
name = "base"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dev-dependencies]
criterion = "0.5.1"
criterion-cycles-per-byte = "0.6.1"

[lib]
bench = false

[[bench]]
name = "base-bench"
path = "benches/bench.rs"
harness = false
