[package]
name = "base"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dev-dependencies]
criterion = "0.7.0"

[lib]
bench = false

[[bench]]
name = "base-bench"
path = "benches/bench.rs"
harness = false
