[package]
name = "base"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
procmacros = { path = "../procmacros" }

[dev-dependencies]
criterion = "0.8.1"

[lints]
workspace = true

[lib]
bench = false

[[bench]]
name = "base-bench"
path = "benches/bench.rs"
harness = false
