[package]
name = "geometry"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.216", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.177"

[lib]
bench = false
