[package]
name = "geometry"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
num-traits = "0.2.19"
serde = { version = "1.0.225", features = ["derive"], optional = true }

[dev-dependencies]
serde_test = "1.0.177"

[lib]
bench = false
