[package]
name = "bee-html5lib-tests"
version = "0.1.0"
edition = "2021"
authors = ["BEE project contributors"]
publish = false

[dev-dependencies]
bee-htmlparser = { path = "../htmlparser" }
bee-htmltokenizer = { path = "../htmltokenizer", features = ["html5lib-tests"] }
ctor = "0.1.26"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = "1.0.94"
thiserror = "1.0.40"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
