[package]
name = "htmlparser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
flagset = "0.4.6"
htmltokenizer = { path = "../htmltokenizer" }
logging = { path = "../logging" }
phf = { version = "0.11.3", features = ["macros"] }
thiserror = "2.0.11"
unicase = "2.8.1"

[dev-dependencies]
anyhow = "1.0.96"
criterion = "0.5.1"
ctor = "0.3.6"
itertools = "0.14.0"
toydom = { path = "../toydom" }

[lib]
bench = false

[[bench]]
name = "htmlparser-bench"
path = "benches/htmlparser_bench.rs"
harness = false

[[example]]
name = "htmlparser"
path = "examples/print_html_tag.rs"
