[package]
name = "htmlparser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flagset = "0.4.7"
htmltokenizer = { path = "../htmltokenizer" }
logging = { path = "../logging" }
phf = { version = "0.11.3", features = ["macros"] }
thiserror = "2.0.12"
unicase = "2.8.1"

[dev-dependencies]
anyhow = "1.0.97"
criterion = "0.5.1"
ctor = "0.4.1"
itertools = "0.14.0"
toydom = { path = "../toydom" }

[lib]
bench = false

[[bench]]
name = "htmlparser-bench"
path = "benches/htmlparser_bench.rs"
harness = false

[[example]]
name = "htmlparser"
path = "examples/print_html_tag.rs"
