[package]
name = "htmlparser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
flagset = "0.4.7"
htmltokenizer = { path = "../htmltokenizer" }
logging = { path = "../logging" }
phf = { version = "0.12.1", features = ["macros"] }
thiserror = "2.0.15"
unicase = "2.8.1"

[dev-dependencies]
anyhow = "1.0.99"
criterion = "0.7.0"
ctor = "0.5.0"
itertools = "0.14.0"
toydom = { path = "../toydom" }

[lib]
bench = false

[[bench]]
name = "htmlparser-bench"
path = "benches/htmlparser_bench.rs"
harness = false

[[example]]
name = "htmlparser"
path = "examples/print_html_tag.rs"
