[package]
name = "htmltokenizer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bytes = "1.9.0"
logging = { path = "../logging" }
thiserror = "2.0.9"

[dev-dependencies]
anyhow = "1.0.95"
assert_matches = "1.5.0"
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.134"

[lib]
bench = false
