[package]
name = "htmltokenizer"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
bytes = "1.10.1"
logging = { path = "../logging" }
thiserror = "2.0.12"

[dev-dependencies]
anyhow = "1.0.97"
assert_matches = "1.5.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"

[lib]
bench = false
