[package]
name = "jsgc"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base = { path = "../base" }
logging = { path = "../logging" }
# TODO(issue#237): replace w/ own allocator
bumpalo = "3.20.1"

[lints]
workspace = true

[lib]
bench = false
