[package]
name = "jsparser"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[features]
location = []

[dependencies]
bitflags = "2.11.0"
indexmap = "2.13.0"
logging = { path = "../../libs/logging" }
phf = { version = "0.13.1", features = ["macros"] }
smallvec = "1.15.1"
thiserror = "2.0.18"
unicode-id-start = "1.4.0"

[dev-dependencies]
anyhow = "1.0.101"
assert_matches = "1.5.0"
clap = { version = "4.5.59", features = ["env", "derive", "wrap_help"] }
ctor = "0.6.3"

[lints]
workspace = true

[lib]
bench = false

[[example]]
name = "jsparser"
path = "examples/jsparser.rs"

[[example]]
name = "jsast"
path = "examples/jsast.rs"
