[package]
name = "jsruntime"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base = { path = "../base" }
bitflags = "2.11.1"
cranelift = "0.131.0"
cranelift-module = "0.131.0"
cranelift-jit = "0.131.0"
cranelift-native = "0.131.0"
indexmap = "2.13.1"
itertools = "0.14.0"
jsgc = { path = "../jsgc" }
jsgc-derive = { path = "../jsgc-derive" }
jsparser = { path = "../jsparser", features = ["location"] }
logging = { path = "../logging" }
paste = "1.0.15"
rustc-hash = "2.1.2"
thiserror = "2.0.18"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.8.2"
ctor = "1.0.5"

[lints]
workspace = true

[[bench]]
name = "jsruntime-bench"
path = "benches/bench.rs"
harness = false
