[package]
name = "jsruntime"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base = { path = "../base" }
bitflags = "2.12.1"
cranelift = "0.133.1"
cranelift-module = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-native = "0.133.1"
indexmap = "2.13.1"
itertools = "0.15.0"
jsgc = { path = "../jsgc" }
jsgc-derive = { path = "../jsgc-derive" }
jsparser = { path = "../jsparser", features = ["location"] }
logging = { path = "../logging" }
paste = "1.0.15"
rustc-hash = "2.1.2"
thiserror = "2.0.18"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.8.2"
ctor = "1.0.7"

[lints]
workspace = true

[[bench]]
name = "jsruntime-bench"
path = "benches/bench.rs"
harness = false
