[package]
name = "jsruntime"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
base = { path = "../base" }
bitflags = "2.13.0"
cranelift = "0.134.2"
cranelift-module = "0.134.2"
cranelift-jit = "0.134.2"
cranelift-native = "0.134.2"
indexmap = "2.14.0"
itertools = "0.15.0"
jsgc = { path = "../jsgc" }
jsgc-derive = { path = "../jsgc-derive" }
jsparser = { path = "../jsparser", features = ["location"] }
logging = { path = "../logging" }
paste = "1.0.15"
rustc-hash = "2.1.3"
thiserror = "2.0.18"

[dev-dependencies]
assert_matches = "1.5.0"
criterion = "0.8.2"
ctor = "1.0.8"

[lints]
workspace = true

[[bench]]
name = "jsruntime-bench"
path = "benches/bench.rs"
harness = false
