[package]
name = "bee-layout-tests"
version = "0.1.0"
authors = ["BEE project contributors"]
edition = "2021"
publish = false

[dev-dependencies]
bee-layout = { path = "../layout", features = ["service"] }
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
serde_json = "1.0.94"
serde_yaml = "0.9.19"
