[package]
name = "layout"
version = "0.0.0"
authors = ["BEE project contributors"]
edition = "2021"
publish = false

[features]
service = ["geometry/serde", "serde", "serde_json"]

[dependencies]
anyhow = "1.0.83"
geometry = { path = "../geometry" }
logging = { path = "../logging" }
num-traits = "0.2.19"
serde = { version = "1.0.200", features = ["derive", "rc"], optional = true }
serde_json = { version = "1.0.116", optional = true }

[dev-dependencies]
assert-json-diff = "2.0.2"
assert_matches = "1.5.0"
serde_json = "1.0.116"
serde_yaml = "0.9.34"

[lib]
bench = false
