[package]
name = "logging"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
ctor = "0.4.2"
is-terminal = "0.4.16"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json"] }

[dev-dependencies]
paste = "1.0.15"
static_assertions = "1.1.0"
