[package]
name = "logging"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
ctor = "0.6.2"
is-terminal = "0.4.17"
tracing = "0.1.43"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
paste = "1.0.15"
static_assertions = "1.1.0"

[lints]
workspace = true
