[package]
name = "procmacros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proc-macro2 = "1.0.105"
quote = "1.0.43"
syn = "2.0.113"

[lints]
workspace = true

[lib]
bench = false
proc-macro = true
