[package]
name = "procmacros"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
proc-macro2 = "1.0.106"
quote = "1.0.44"
syn = "2.0.114"

[lints]
workspace = true

[lib]
bench = false
proc-macro = true
